--- a/index.html
+++ b/index.html
@@ -33,24 +33,21 @@
         </section>
 
         <section class="section--page">
-            <h2> EDUCATION </h2>
+            <h2> Education </h2>
             <ul id="qualifications--list">
-            <li> 🎓 University of Sheffield, Sheffield
+            <li> ✔️ University of Sheffield (September 2021 - September 2022)
                 <ul id="qualifications--list">
-                <li> 📘 Master of Data Science  [Grade-2:1] </li>
-                <li> ⌛ September 2021 - September 2022</li> </ul>
+                <li> 📘 Master of Data Science  [Grade-2:1] </li></ul>
             </li>
 
-            <li> 🎓 University of Mumbai, India 
+            <li> ✔️ Mumbai University, India (August 2016 - August 2020)
                 <ul  id="qualifications--list">
-                <li> 📘 Bachelor of Engineering- Information Technology  [Grade-1st Class]</li>
-                <li> ⌛ August 2016 - August 2020</li></ul>
+                <li> 📘 Bachelor of Engineering- Information Technology  [Grade-1st Class]</li></ul>
             </li> 
 
-            <li> 🎓 Atomic Energy Junior College, Mumbai-India
+            <li> ✔️ Atomic Energy Junior College, Mumbai-India (July 2014 - July 2016)
                 <ul  id="qualifications--list">
-                <li> 📘 High School- Computer Science  [Grade-85.4%]</li>
-                <li> ⌛ July 2014 - July 2016</li> </ul>
+                <li> 📘 High School- Computer Science  [Grade-85.4%]</li></ul>
             </li> 
             </ul>
         </section>
@@ -138,6 +135,15 @@
             </div>
 
         </section>
+
+        <section class="section--page">
+            <h2> Achievements </h2>
+            <div class="line-break"></div>
+            <ul id="qualifications--list"> 
+                <li> 🎯 Debate Winner at University of Sheffield- Political Microtargetting- Boon or Bane</li>
+                <li> 🎯 Departmental Editorial Head for Annual Information Technology Magazine </li>
+                <li> 🎯 Science Exhibition Winner- Creation of Biodiesel using vegetable waste </li>
+                <li> 🎯 Organized Blood Donation Drive in college under the NSS in India (National Service Scheme) </li>
     </div>
     
 </body>
